Added min-width on nav sidebar

--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -6158,6 +6158,7 @@ body[dir="rtl"] .psiphon-header .header-nav-join {
 }
 .nav-tabs {
   background-color: #ffffff;
+  min-width: 10em;
 }
 .nav-tabs.main-nav.nav {
   border-width: 0;
