--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -169,6 +169,7 @@ body {
 
 .nav-tabs {
   background-color: @psiPrimary;
+  min-width: 10em;
 
   // Override default styles. Over-specify in order to default default rule precedence.
   &.main-nav.nav {
