--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -462,6 +462,10 @@ body {
     body[dir="rtl"] & {
       .pull-left;
     }
+
+    i {
+      font-size: 0.8em;
+    }
   }
 }
 
@@ -507,7 +511,7 @@ body {
 
     i {
       // Make the caret more vertically centered, with a bit of space on the side.
-      padding: 0.2em 0.5em 0 0.5em;
+      padding: 0.4em 0.5em 0 0.5em;
 
       .open&:before {
         // Change the icon when combo is open.
