Added timestamps to log messages

--- a/src/webui/css/_rtl-support.less
+++ b/src/webui/css/_rtl-support.less
@@ -77,4 +77,11 @@ body[dir="rtl"] {
     right: 0;
     float: right;
   }
+
+  // See bootstrap:tables.less
+  .table {
+    th, td {
+      text-align: right;
+    }
+  }
 }
