--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -62,7 +62,12 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+
   overflow-y: hidden;
+  // We stil seem to have body scroll problems triggered by click-drag. That
+  // should be fixed by this:
+  -ms-scroll-limit-y-max: 0;
+  // But isn't. So the JS initScrollFix() function is used to really fix it.
 
   background-color: @psiNeutral;
 }
