Altered fonts again. Removed Titillium.

--- a/src/webui/css/_rtl-support.less
+++ b/src/webui/css/_rtl-support.less
@@ -84,4 +84,9 @@ body[dir="rtl"] {
       text-align: right;
     }
   }
+
+  // See bootstrap:scaffolding.less
+  & {
+    font-family: @baseFontFamilyRTL;
+  }
 }
