Move connect box up a bit. Make box center better on higher IE.

--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -303,7 +303,8 @@ body {
   max-width: 600px;
   position: relative;
   padding: 0;
-  top: 10%;
+  top: 5%; // fallback for older IE
+  top: ~"calc(50% - 200px)";
 
   > .connect-toggle-content {
 
