--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -6261,7 +6261,8 @@ body[dir="rtl"] .main-nav .multiline-tab-icon {
   max-width: 600px;
   position: relative;
   padding: 0;
-  top: 10%;
+  top: 5%;
+  top: calc(50% - 200px);
 }
 #connect-toggle > .connect-toggle-content {
   position: absolute;
