Revamped 'Connection' tab link. Its text is now the connection state. Also, the state image is always visible.

--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -6227,6 +6227,9 @@ body[dir="rtl"] .main-nav .multiline-tab-icon {
   /* IE7 inline-block hack */
   *zoom: 1;
 }
+.main-nav #connection-tab [data-connect-state] {
+  position: absolute;
+}
 .tab-content {
   overflow: hidden;
   padding-top: 1em;
