--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -258,6 +258,13 @@ body {
     display: inline-block;
     .ie7-inline-block();
   }
+
+  // The connection tab link has more complex content
+  #connection-tab {
+    [data-connect-state] {
+      position: absolute;
+    }
+  }
 }
 
 .tab-content {
