Log messages: Renamed to 'Logs'. Moved below 'About'. Made list always LTR (because logs aren't translated).

--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -6641,7 +6641,7 @@ body[dir="rtl"] #EgressRegionCombo .btn .flag {
   cursor: hand;
   background-color: #ffffff;
 }
-/* LOG MESSAGES */
+/* LOGS */
 .hiding-priority-0.log-messages .priority-0 {
   display: none;
 }
@@ -6651,6 +6651,12 @@ body[dir="rtl"] #EgressRegionCombo .btn .flag {
 .log-messages .timestamp {
   width: 1%;
   white-space: nowrap;
+}
+.log-messages,
+.log-messages th,
+.log-messages td {
+  direction: ltr !important;
+  text-align: left !important;
 }
 /* LANGUAGES */
 #language-pane .language-item {
