--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -429,6 +429,8 @@ body {
   overflow: hidden;
   left: 1em;
   right: 1em;
+  padding: 0.2em;
+  background-color: darken(@psiNeutral, 5%);
 
   .clearfix;
 
@@ -461,7 +463,7 @@ body {
 
 #settings-accordion {
   position: absolute;
-  top: 2.5em;
+  top: 38px; // based on eyeballing
   bottom: 0;
   overflow-y: scroll;
   overflow-x: hidden;
