IE7: Fixed Settings controls in RTL

--- a/src/webui/css/lteIE7.css
+++ b/src/webui/css/lteIE7.css
@@ -26,3 +26,21 @@ div { display: block; }
 .icon-fixed-width {
   padding-top: 0.1em;
 }
+
+/*
+IE7's crappy rendering can't cope with float:right inside a position:absolute parent.
+Info: https://stackoverflow.com/questions/24431054/float-right-and-float-left-in-absolute-container-ie7-expands-to-100-width
+This causes breakage in the Settings pane when using a RTL language (the accordion
+is position:absolute).
+One way to fix this would be to remove all usage on that tab of float:right on
+IE7, but we'll have to add a bunch of rules to do so, and there's a risk of
+forgetting to add a new one later.
+Another way to fix it is to set a width on the position:absolute element. This
+doesn't look perfect, but not terrible, and fixes the float problem for all
+child elements.
+*/
+#settings-accordion {
+  /* This value has been chosen by tweaking and checking. It looks less good as
+     the window gets wider. */
+  width: 97%;
+}
