--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -720,6 +720,10 @@ label[for="EgressRegionCombo"], label[for="EgressRegion"] {
   // There's not much text, so let's bump it up a bit.
   font-size: 1.5em;
   line-height: 1.3em;
+
+  .client-version {
+    font-size: 60%;
+  }
 }
 
 .wordart {
